cluster/app-api/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-api
  name: app-api
  namespace: app-api
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: app-api
  template:
    metadata:
      labels:
        app: app-api
    spec:
      imagePullSecrets:
        - name: gitlab-token-app-api
      containers:
        - image: registry.login.no/tekkom/dev/app-api:1.1.0
          imagePullPolicy: Always
          name: app-api
          ports:
            - containerPort: 8080
              name: 8080tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              memory: "32Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - app-api
                topologyKey: kubernetes.io/hostname
